RESOLVED FIXED238770
[WPE][GTK] Fix code examples in reference documentation
https://bugs.webkit.org/show_bug.cgi?id=238770
Summary [WPE][GTK] Fix code examples in reference documentation
Adrian Perez
Reported 2022-04-04 14:38:12 PDT
We need to replace the DocBook SGML syntax with Markdown fenced blocks after the switch to gi-docgen in r292263 :]
Attachments
Patch (18.60 KB, patch)
2022-04-04 14:42 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2022-04-04 14:42:53 PDT
EWS
Comment 2 2022-04-04 20:02:51 PDT
Committed r292367 (249232@main): <https://commits.webkit.org/249232@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456637 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-04 20:03:16 PDT
Note You need to log in before you can comment on or make changes to this bug.