[WPE][GTK] Fix code examples in reference documentation https://bugs.webkit.org/show_bug.cgi?id=238770

Reviewed by Michael Catanzaro.

Replace DocBook SGML tags containing code examples with Markdown fenced code blocks
as consumed by gi-docgen.

* UIProcess/API/glib/WebKitSettings.cpp:
* UIProcess/API/glib/WebKitUserContentManager.cpp:
* UIProcess/API/glib/WebKitWebContext.cpp:
* UIProcess/API/glib/WebKitWebView.cpp:
(webkit_web_view_class_init):
* UIProcess/API/glib/WebKitWebsitePolicies.cpp:
* UIProcess/API/gtk/WebKitWebInspector.cpp:
* UIProcess/API/gtk/WebKitWebViewGtk.cpp:
* WebProcess/InjectedBundle/API/glib/WebKitWebExtension.cpp:

Canonical link: https://commits.webkit.org/249232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292367 268f45cc-cd09-0410-ab3c-d52691b4dbfc