Source/WebKit/UIProcess/API/glib/WebKitWebsitePolicies.cpp
@@ -177,19 +177,22 @@ WebKitWebsitePolicies* webkit_website_policies_new(void)
  *
  * Returns: (transfer full): the newly created #WebKitWebsitePolicies
  *
- * <informalexample><programlisting>
+ * ```c
  * WebKitWebsitePolicies *default_website_policies = webkit_website_policies_new_with_policies(
  *     "autoplay", WEBKIT_AUTOPLAY_DENY,
  *     NULL);
- * ...
+ *
+ * // ...
+ *
  * WebKitWebView *view = WEBKIT_WEB_VIEW(g_object_new(WEBKIT_TYPE_WEB_VIEW,
  *     "web-context", ctx,
  *     "settings", settings,
  *     "user-content-manager", content_manager,
  *     "website-policies", default_website_policies,
  *     NULL));
- * ...
- * </programlisting></informalexample>
+ *
+ * // ...
+ * ```
  *
  * Since: 2.30
  */
