Source/WebKit/UIProcess/API/gtk/WebKitWebInspector.cpp
@@ -44,18 +44,18 @@ using namespace WebKit;
  * #WebKitWebView has set the #WebKitSettings:enable-developer-extras
  * to true, otherwise no inspector is available.
  *
- * <informalexample><programlisting>
- * /<!-- -->* Enable the developer extras *<!-- -->/
+ * ```c
+ * // Enable the developer extras
  * WebKitSettings *settings = webkit_web_view_get_settings (WEBKIT_WEB_VIEW(my_webview));
  * g_object_set (G_OBJECT(settings), "enable-developer-extras", TRUE, NULL);
  *
- * /<!-- -->* Load some data or reload to be able to inspect the page*<!-- -->/
+ * // Load some data or reload to be able to inspect the page
  * webkit_web_view_load_uri (WEBKIT_WEB_VIEW(my_webview), "http://www.gnome.org");
  *
- * /<!-- -->* Show the inspector *<!-- -->/
+ * // Show the inspector
  * WebKitWebInspector *inspector = webkit_web_view_get_inspector (WEBKIT_WEB_VIEW(my_webview));
  * webkit_web_inspector_show (WEBKIT_WEB_INSPECTOR(inspector));
- * </programlisting></informalexample>
+ * ```
  */
 
 enum {
