Source/WebKit/WebProcess/InjectedBundle/API/glib/WebKitWebExtension.cpp
@@ -51,7 +51,7 @@ using namespace WebKit;
  * This function has to be public and it has to use the #G_MODULE_EXPORT macro. It is called when the
  * web process is initialized.
  *
- * <informalexample><programlisting>
+ * ```c
  * static void
  * web_page_created_callback (WebKitWebExtension *extension,
  *                            WebKitWebPage      *web_page,
@@ -69,7 +69,7 @@ using namespace WebKit;
  *                       G_CALLBACK (web_page_created_callback),
  *                       NULL);
  * }
- * </programlisting></informalexample>
+ * ```
  *
  * The previous piece of code shows a trivial example of an extension that notifies when
  * a #WebKitWebPage is created.
@@ -82,14 +82,14 @@ using namespace WebKit;
  * function, you have to call webkit_web_context_set_web_extensions_initialization_user_data() with
  * the desired data as parameter. You can see an example of this in the following piece of code:
  *
- * <informalexample><programlisting>
- * #define WEB_EXTENSIONS_DIRECTORY /<!-- -->* ... *<!-- -->/
+ * ```c
+ * #define WEB_EXTENSIONS_DIRECTORY // ...
  *
  * static void
  * initialize_web_extensions (WebKitWebContext *context,
  *                            gpointer          user_data)
  * {
- *   /<!-- -->* Web Extensions get a different ID for each Web Process *<!-- -->/
+ *   // Web Extensions get a different ID for each Web Process
  *   static guint32 unique_id = 0;
  *
  *   webkit_web_context_set_web_extensions_directory (
@@ -107,9 +107,9 @@ using namespace WebKit;
  *
  *   GtkWidget *view = webkit_web_view_new ();
  *
- *   /<!-- -->* ... *<!-- -->/
+ *   // ...
  * }
- * </programlisting></informalexample>
+ * ```
  */
 
 enum {
